--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Dicoding Event App</string>
     <string name="title_home">Home</string>
-    <string name="title_upcomming">Upcomming</string>
+    <string name="title_upcoming">Upcoming</string>
     <string name="title_finished">Finished</string>
 </resources>
