--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="category">Seminar</string>
     <string name="owner">oleh: %1$s</string>
     <string name="quota">sisa kuota: %1$s</string>
+    <string name="dicoding_event">Dicoding Event</string>
+    <string name="upcoming">Upcoming Events</string>
+    <string name="finished">Finished Events</string>
 </resources>
