--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="begin">Terbuka Hingga: %1$s</string>
     <string name="quota_detail">Sisa Kuota: %1$d peserta</string>
     <string name="location">Lokasi: %1$s</string>
+    <string name="search_hint">Cari event</string>
+    <string name="event_tidak_ada">Event tidak ada</string>
 </resources>
